[project]
name = "restaurant-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "numexpr>=2.11.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
    "wikipedia>=1.4.0",
]
